migration_backup/k8s_ainfluencer/staging/auth-service-virtualservice.yaml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  labels:
    app: auth-service
    service-type: security-service
  name: auth-service-vs
  namespace: ainflue-staging
spec:
  hosts:
  - auth-service.ainflue-staging.svc.cluster.local
  http:
  - match:
    - uri:
        prefix: /
    retries:
      attempts: 3
      perTryTimeout: 10s
      retryOn: gateway-error,connect-failure,refused-stream
    route:
    - destination:
        host: auth-service.ainflue-staging.svc.cluster.local
        port:
          number: 8005
    timeout: 30s
